package org.example;

public interface Table<T> {
    T getById(int id);
}
